105. Variables con let y const

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
     </div>
 
     <!-- <script src="js/scripts.js"></script> -->
-    <script src="js/01.js"></script>
+    <!-- <script src="js/var.js"></script> -->
+    <!-- <script src="js/let.js"></script> -->
+    <script src="js/const.js"></script>
 
 
 </body>
