--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <!-- <script src="js/scripts.js"></script> -->
     <!-- <script src="js/var.js"></script> -->
     <!-- <script src="js/let.js"></script> -->
-    <script src="js/const.js"></script>
+    <!-- <script src="js/const.js"></script> -->
+    <script src="js/string.js"></script>
 
 
 </body>
