--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <!-- <script src="js/var.js"></script> -->
     <!-- <script src="js/let.js"></script> -->
     <!-- <script src="js/const.js"></script> -->
-    <script src="js/string.js"></script>
-
+    <!-- <script src="js/string.js"></script> -->
+    <script src="js/numeros.js"></script>
 
 </body>
 </html>
