--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <!-- <script src="js/let.js"></script> -->
     <!-- <script src="js/const.js"></script> -->
     <!-- <script src="js/string.js"></script> -->
-    <script src="js/numeros.js"></script>
+    <!-- <script src="js/numeros.js"></script> -->
+    <script src="js/math.js"></script>
 
 </body>
 </html>
