110. Controlar el Orden de las operaciones

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <!-- <script src="js/const.js"></script> -->
     <!-- <script src="js/string.js"></script> -->
     <!-- <script src="js/numeros.js"></script> -->
-    <script src="js/math.js"></script>
+    <!-- <script src="js/math.js"></script> -->
+    <script src="js/ordenOperaciones.js"></script>
 
 </body>
 </html>
