--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <!-- <script src="js/math.js"></script> -->
     <!-- <script src="js/ordenOperaciones.js"></script> -->
     <!-- <script src="js/concatenacionYTemplateStrings.js"></script> -->
-    <script src="js/booleans.js"></script>
+    <!-- <script src="js/booleans.js"></script> -->
+    <script src="js/objetos.js"></script>
 
 </body>
 </html>
