115. Destructuring de Objetos

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
     <!-- <script src="js/ordenOperaciones.js"></script> -->
     <!-- <script src="js/concatenacionYTemplateStrings.js"></script> -->
     <!-- <script src="js/booleans.js"></script> -->
-    <script src="js/objetos.js"></script>
+    <!-- <script src="js/objetos.js"></script> -->
+    <script src="js/destructuringObjetos.js"></script>
 
 </body>
 </html>
