--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <!-- <script src="js/concatenacionYTemplateStrings.js"></script> -->
     <!-- <script src="js/booleans.js"></script> -->
     <!-- <script src="js/objetos.js"></script> -->
-    <script src="js/destructuringObjetos.js"></script>
+    <!-- <script src="js/destructuringObjetos.js"></script> -->
+    <script src="js/objectMethods.js"></script>
 
 </body>
 </html>
