117. Unir dos objetos con el Spread Operator

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <!-- <script src="js/booleans.js"></script> -->
     <!-- <script src="js/objetos.js"></script> -->
     <!-- <script src="js/destructuringObjetos.js"></script> -->
-    <script src="js/objectMethods.js"></script>
+    <script src="js/spreadOperator.js"></script>
 
 </body>
 </html>
