--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <!-- <script src="js/booleans.js"></script> -->
     <!-- <script src="js/objetos.js"></script> -->
     <!-- <script src="js/destructuringObjetos.js"></script> -->
-    <script src="js/spreadOperator.js"></script>
+    <!-- <script src="js/spreadOperator.js"></script> -->
+    <script src="js/arrays.js"></script>
 
 </body>
 </html>
