120. Más Métodos de Arrays

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <!-- <script src="js/objetos.js"></script> -->
     <!-- <script src="js/destructuringObjetos.js"></script> -->
     <!-- <script src="js/spreadOperator.js"></script> -->
-    <script src="js/arrays.js"></script>
+    <!-- <script src="js/arrays.js"></script> -->
+    <script src="js/arrayMethods.js"></script>
 
 </body>
 </html>
