--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <!-- <script src="js/destructuringObjetos.js"></script> -->
     <!-- <script src="js/spreadOperator.js"></script> -->
     <!-- <script src="js/arrays.js"></script> -->
-    <script src="js/arrayMethods.js"></script>
+    <!-- <script src="js/arrayMethods.js"></script> -->
+    <script src="js/funciones.js"></script>
 
 </body>
 </html>
