123. Diferencia de un Método y una función

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <!-- <script src="js/spreadOperator.js"></script> -->
     <!-- <script src="js/arrays.js"></script> -->
     <!-- <script src="js/arrayMethods.js"></script> -->
-    <script src="js/funciones.js"></script>
+    <!-- <script src="js/funciones.js"></script> -->
+    <script src="js/metodoVsFuncion.js"></script>
 
 </body>
 </html>
