124. Funciones con parametros y argumentos

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- <script src="js/arrays.js"></script> -->
     <!-- <script src="js/arrayMethods.js"></script> -->
     <!-- <script src="js/funciones.js"></script> -->
-    <script src="js/metodoVsFuncion.js"></script>
+    <script src="js/funcionesParametrosArgumentos.js"></script>
 
 </body>
 </html>
