125. Funciones que retornan valores

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <!-- <script src="js/arrays.js"></script> -->
     <!-- <script src="js/arrayMethods.js"></script> -->
     <!-- <script src="js/funciones.js"></script> -->
-    <script src="js/funcionesParametrosArgumentos.js"></script>
+    <!-- <script src="js/funcionesParametrosArgumentos.js"></script> -->
+    <script src="js/funcionesReturn.js"></script>
 
 </body>
 </html>
