126. Métodos de Propiedad

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     <!-- <script src="js/arrayMethods.js"></script> -->
     <!-- <script src="js/funciones.js"></script> -->
     <!-- <script src="js/funcionesParametrosArgumentos.js"></script> -->
-    <script src="js/funcionesReturn.js"></script>
+    <!-- <script src="js/funcionesReturn.js"></script> -->
+    <script src="js/metodosPropiedad.js"></script>
 
 </body>
 </html>
