--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <!-- <script src="js/funciones.js"></script> -->
     <!-- <script src="js/funcionesParametrosArgumentos.js"></script> -->
     <!-- <script src="js/funcionesReturn.js"></script> -->
-    <script src="js/metodosPropiedad.js"></script>
+    <!-- <script src="js/metodosPropiedad.js"></script> -->
+    <script src="js/arrowFunctions.js"></script>
 
 </body>
 </html>
