--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <!-- <script src="js/funcionesParametrosArgumentos.js"></script> -->
     <!-- <script src="js/funcionesReturn.js"></script> -->
     <!-- <script src="js/metodosPropiedad.js"></script> -->
-    <script src="js/arrowFunctions.js"></script>
+    <!-- <script src="js/arrowFunctions.js"></script> -->
+    <script src="js/switch.js"></script>
 
 </body>
 </html>
