--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <!-- <script src="js/funcionesReturn.js"></script> -->
     <!-- <script src="js/metodosPropiedad.js"></script> -->
     <!-- <script src="js/arrowFunctions.js"></script> -->
-    <script src="js/switch.js"></script>
+    <!-- <script src="js/switch.js"></script> -->
+    <script src="js/loops.js"></script>
 
 </body>
 </html>
