--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <!-- <script src="js/metodosPropiedad.js"></script> -->
     <!-- <script src="js/arrowFunctions.js"></script> -->
     <!-- <script src="js/switch.js"></script> -->
-    <script src="js/loops.js"></script>
+    <script src="js/forEachYMap.js"></script>
 
 </body>
 </html>
