134. Object Constructor y Object Literal

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     <!-- <script src="js/metodosPropiedad.js"></script> -->
     <!-- <script src="js/arrowFunctions.js"></script> -->
     <!-- <script src="js/switch.js"></script> -->
-    <script src="js/forEachYMap.js"></script>
+    <!-- <script src="js/forEachYMap.js"></script> -->
+    <script src="js/objLiteralYObjConstructor.js"></script>
 
 </body>
 </html>
