--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <!-- <script src="js/arrowFunctions.js"></script> -->
     <!-- <script src="js/switch.js"></script> -->
     <!-- <script src="js/forEachYMap.js"></script> -->
-    <script src="js/objLiteralYObjConstructor.js"></script>
+    <!-- <script src="js/objLiteralYObjConstructor.js"></script> -->
+    <script src="js/clases.js"></script>
 
 </body>
 </html>
