138. ¿Que es try catch?

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     <!-- <script src="js/switch.js"></script> -->
     <!-- <script src="js/forEachYMap.js"></script> -->
     <!-- <script src="js/objLiteralYObjConstructor.js"></script> -->
-    <script src="js/clases.js"></script>
+    <!-- <script src="js/clases.js"></script> -->
+    <script src="js/tryCatch.js"></script>
 
 </body>
 </html>
