139. Promises en JavaScript

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     <!-- <script src="js/forEachYMap.js"></script> -->
     <!-- <script src="js/objLiteralYObjConstructor.js"></script> -->
     <!-- <script src="js/clases.js"></script> -->
-    <script src="js/tryCatch.js"></script>
+    <!-- <script src="js/tryCatch.js"></script> -->
+    <script src="js/promises.js"></script>
 
 </body>
 </html>
