--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         <a href="http://www.codigoconjuan.com" target="_blank">codigoconjuan.com</a>
         <p>Introducción a JavaScript</p>
         <p class="hashtag">#DesarrolloWebCompleto</p>
+
+        <button type="button" id="boton">Ver Notificación</button>
     </div>
 
     <!-- <script src="js/scripts.js"></script> -->
@@ -41,7 +43,8 @@
     <!-- <script src="js/objLiteralYObjConstructor.js"></script> -->
     <!-- <script src="js/clases.js"></script> -->
     <!-- <script src="js/tryCatch.js"></script> -->
-    <script src="js/promises.js"></script>
+    <!-- <script src="js/promises.js"></script> -->
+    <script src="js/notificacionAPI.js"></script>
 
 </body>
 </html>
