--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
     <!-- <script src="js/clases.js"></script> -->
     <!-- <script src="js/tryCatch.js"></script> -->
     <!-- <script src="js/promises.js"></script> -->
-    <script src="js/notificacionAPI.js"></script>
+    <!-- <script src="js/notificacionAPI.js"></script> -->
+    <script src="js/asyncAwait.js"></script>
 
 </body>
 </html>
